Added user and docker implemetations.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
     "docker:build": "docker build -t nerdzpace-auth .",
-    "docker:run": "docker run -p 3000:3000 -d nerdzpace-auth",
+    "docker:run": "docker run --rm -p 4000:4000 -d --name nerdzpace-auth --network=nerdzpace-net nerdzpace-auth",
+    "docker:stop": "docker stop nerdzpace-auth",
     "premigrate": "npm run build",
     "migrate": "node ./dist/migrate",
     "preopenapi-spec": "npm run build",
